<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.pro.stickermaker.MainActivity">
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/edit_icon"
        android:title="@string/action_edit"
        android:orderInCategory="1"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/share_icon"
        android:orderInCategory="2"
        android:title="@string/action_share"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/delete_icon"
        android:orderInCategory="3"
        android:title="@string/action_delete"
        app:showAsAction="always" />
</menu>